# borsdata-sdk

./: pyproject.toml
borsdata_sdk/: BorsdataAPI.py  pyproject.toml
borsdata_sdk/models/: Instrument.py  KPI.py  Kpi.py  Report.py
demo/: stock-list-ex.ipynb
