[tool.poetry]
name = "borsdata-sdk"
version = "0.1.0"
description = ""
authors = ["murre <43014508+figge215@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
jupyterlab = "^4.1.4"
case-converter = "^1.1.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
